modulo auth refactorizado y comenze el modulo pet
