# swagger/auth.json
@@ -41,6 +41,7 @@
                 "parameters": [{
                         "name": "email",
                         "in": "formData",
+                        "default": "admin@gmail.com",
                         "description": "Email",
                         "required": true,
                         "type": "string"
@@ -48,6 +49,7 @@
                     {
                         "name": "password",
                         "in": "formData",
+                        "default": "123123",
                         "description": "Password",
                         "required": true,
                         "type": "string"
@@ -57,10 +59,7 @@
                     "200": {
                         "description": "I login successfully"
                     },
-                    "400": {
-                        "description": "The request was unsuccessful or Parameters are inconsistent"
-                    },
-                    "403": {
+                    "422": {
                         "description": "Email or Password invalid"
                     },
                     "500": {
@@ -100,12 +99,6 @@
                 "responses": {
                     "200": {
                         "description": "I login successfully"
-                    },
-                    "400": {
-                        "description": "The request was unsuccessful or Parameters are inconsistent"
-                    },
-                    "403": {
-                        "description": "Email or Password invalid"
                     },
                     "500": {
                         "description": "Server error"
@@ -157,12 +150,34 @@
                     "application/json",
                     "application/xml"
                 ],
-                "parameters": [{
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "formData",
+                        "description": "Nombre",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "lastname",
+                        "in": "formData",
+                        "description": "Apellido",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
                         "name": "username",
                         "in": "formData",
                         "description": "Username",
                         "required": true,
                         "type": "string"
+                    },
+                    {
+                        "name": "phone",
+                        "in": "formData",
+                        "description": "Telefono",
+                        "required": true,
+                        "type": "integer"
                     },
                     {
                         "name": "email",
@@ -177,20 +192,16 @@
                         "description": "Password",
                         "required": true,
                         "type": "string"
-                    },
-                    {
-                        "name": "profile_id",
-                        "in": "formData",
-                        "description": "ID Profile(1-Freestyle 2-Competidor 3-Jurado 4-Organizador)",
-                        "required": true,
-                        "type": "integer"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "Registered user successfully"
                     },
-                    "400": {
+                    "422": {
+                        "description": "The request was unsuccessful or Parameters are inconsistent"
+                    },
+                    "500": {
                         "description": "Failed to register user"
                     }
                 }
@@ -227,10 +238,16 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "The password was successfully modified"
+                        "description": "Contrasena modificada con exito"
                     },
-                    "400": {
+                    "422": {
                         "description": "The request was not successful or The user with this ID does not exist"
+                    },
+                    "401": {
+                        "description": "No Autorizado"
+                    },
+                    "500": {
+                        "description": "Error de servidor"
                     }
                 },
                 "security": [{
@@ -272,10 +289,16 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "The password was successfully modified"
+                        "description": "Contrasena modificada con exito"
                     },
-                    "400": {
+                    "422": {
                         "description": "The request was not successful or The user with this ID does not exist"
+                    },
+                    "401": {
+                        "description": "No Autorizado"
+                    },
+                    "500": {
+                        "description": "Error de servidor"
                     }
                 },
                 "security": [{
@@ -303,7 +326,14 @@
                 "parameters": [{
                         "name": "name",
                         "in": "formData",
-                        "description": "Name",
+                        "description": "Nombre",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "lastname",
+                        "in": "formData",
+                        "description": "Apellido",
                         "required": true,
                         "type": "string"
                     },
@@ -313,6 +343,13 @@
                         "description": "Username",
                         "required": true,
                         "type": "string"
+                    },
+                    {
+                        "name": "phone",
+                        "in": "formData",
+                        "description": "Telefono",
+                        "required": true,
+                        "type": "integer"
                     },
                     {
                         "name": "email",
@@ -327,24 +364,20 @@
                         "description": "Password",
                         "required": true,
                         "type": "string"
-                    },
-                    {
-                        "name": "active",
-                        "in": "formData",
-                        "description": "Active of user",
-                        "required": true,
-                        "type": "boolean"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "The user was created successfully"
                     },
-                    "400": {
+                    "422": {
                         "description": "The request was not successful or The user with this ID does not exist"
                     },
                     "401": {
-                        "description": "Not authorized"
+                        "description": "No Autorizado"
+                    },
+                    "500": {
+                        "description": "Error de servidor"
                     }
                 },
                 "security": [{
@@ -408,6 +441,13 @@
                         "type": "string"
                     },
                     {
+                        "name": "lastname",
+                        "in": "formData",
+                        "description": "Apellido",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
                         "name": "username",
                         "in": "formData",
                         "description": "username",
@@ -415,9 +455,37 @@
                         "type": "string"
                     },
                     {
-                        "name": "biography",
+                        "name": "phone",
                         "in": "formData",
-                        "description": "biography",
+                        "description": "Telefono",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "address",
+                        "in": "formData",
+                        "description": "Direccion",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "email",
+                        "in": "formData",
+                        "description": "Email",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "facebook",
+                        "in": "formData",
+                        "description": "facebook",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "instagram",
+                        "in": "formData",
+                        "description": "instagram",
                         "required": false,
                         "type": "string"
                     }
@@ -426,11 +494,14 @@
                     "200": {
                         "description": "User successfully modified"
                     },
-                    "401": {
-                        "description": "Not authorized"
+                    "422": {
+                        "description": "The request was not successful or The user with this ID does not exist"
                     },
-                    "404": {
-                        "description": "We have not found a user with that ID"
+                    "401": {
+                        "description": "No Autorizado"
+                    },
+                    "500": {
+                        "description": "Error de servidor"
                     }
                 },
                 "security": [{
@@ -462,8 +533,14 @@
                     "200": {
                         "description": "User successfully found"
                     },
-                    "404": {
-                        "description": "We have not found a user with that ID"
+                    "422": {
+                        "description": "The request was not successful or The user with this ID does not exist"
+                    },
+                    "401": {
+                        "description": "No Autorizado"
+                    },
+                    "500": {
+                        "description": "Error de servidor"
                     }
                 },
                 "security": [{
